--- a/zapbook/public/index.html
+++ b/zapbook/public/index.html
@@ -9,6 +9,7 @@
       name="Zapbook"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" crossorigin="anonymous"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Zapbook</title>
